--- a/examples/css/index.css
+++ b/examples/css/index.css
@@ -20,7 +20,6 @@ body {
 .ui-button {
   height: 28px;
   line-height: 28px;
-  margin: 0 6px;
   padding: 0 15px;
   border: 1px solid #4898d5;
   background-color: #2e8ded;
@@ -31,6 +30,10 @@ body {
   text-decoration: none;
   display: inline-block;
   outline: none;
+}
+
+.ui-button+.ui-button {
+  margin: 0 0 0 9px;
 }
 
 .ui-button:hover {
