--- a/examples/css/index.css
+++ b/examples/css/index.css
@@ -17,6 +17,27 @@ body {
   margin: 200px auto;
 }
 
+.ui-dialog-handle-close {
+  color: #666;
+  cursor: pointer;
+  font-family: tahoma, sans-serif;
+  font-size: 24px;
+  line-height: 34px;
+  outline: none;
+  text-decoration: none;
+  display: inline-block;
+  -webkit-transition: color .1s ease-out, transform .1s ease-out;
+  -moz-transition: color .1s ease-out, transform .1s ease-out;
+  transition: color .1s ease-out, transform .1s ease-out;
+}
+
+.ui-dialog-handle-close:hover {
+  color: #333;
+  -webkit-transform: scale(1.16);
+  -moz-transform: scale(1.16);
+  transform: scale(1.16);
+}
+
 .ui-button {
   height: 28px;
   line-height: 28px;
