--- a/css/dialog.css
+++ b/css/dialog.css
@@ -73,7 +73,7 @@
 }
 
 .ui-dialog-backdrop {
-  background: #fff;
+  background: #FFF;
   opacity: .65;
   -ms-filter: alpha(Opacity=65);
   filter: alpha(Opacity=65);
@@ -92,7 +92,7 @@
   margin: 0;
   padding: 0;
   outline: none;
-  background-color: #fff;
+  background-color: #FFF;
   -webkit-background-clip: content;
   background-clip: content;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
@@ -117,10 +117,6 @@
   animation-name: bounceIn;
 }
 
-.ui-dialog-focus {
-  border: 1px solid #A0C2F9;
-}
-
 .ui-dialog-close {
   -webkit-animation-name: bounceOut;
   animation-name: bounceOut;
@@ -142,6 +138,16 @@
   overflow: hidden;
   word-break: keep-all;
   text-overflow: ellipsis;
+}
+
+.ui-dialog-title::before {
+  content: "[√] ";
+  color: #B8B8B8;
+}
+
+.ui-dialog-focus .ui-dialog-title::before {
+  content: "[√] ";
+  color: #006400;
 }
 
 .ui-dialog-controls {
