--- a/examples/css/index.css
+++ b/examples/css/index.css
@@ -1,3 +1,7 @@
+html {
+  height: 100%;
+}
+
 body {
   -webkit-font-feature-settings: 'kern' 1;
   -moz-font-feature-settings: 'kern' 1;
@@ -9,12 +13,14 @@ body {
   color: #424242;
   margin: 0;
   padding: 0;
+  min-height: 100%;
 }
 
 .main {
   text-align: center;
   width: 666px;
-  margin: 200px auto;
+  padding: 200px 0;
+  margin: 0 auto;
 }
 
 .ui-dialog-control-close {
